--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.5.0",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "uuid": "^8.3.2",
     "validator": "^13.9.0"
   },
